:art: 更新配置